--- a/ads/templates/ads/ad_detail.html
+++ b/ads/templates/ads/ad_detail.html
@@ -1,7 +1,31 @@
 {% extends "base_menu.html" %}
 {% load humanize %} <!-- https://docs.djangoproject.com/en/3.0/ref/contrib/humanize -->
 <!-- ad = name of model, ads = name of app -->
+{% block head %}
+<style type="text/css">
+	.overlay{
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 10;
+		display: none;
+		background-color: rgba(0,0,0,0.5);  /*dim the background*/
+	}
+</style>
+{% endblock %}
+
+
 {% block content %}
+{% if ad.content_type %}
+<div id="overlay" class="overlay" style="text-align: center;" 
+	onclick="document.getElementById('overlay').style.display='none';">
+
+	<img style="width:90%; margin-top: 50px; border: 3px solid black;" src="{% url 'ads:ad_picture' ad.id %}">
+</div>
+{% endif %}
+
 <span style="float:right;">
 	({{ ad.updated_at|naturaltime }})
 	{% if ad.owner == user %}
@@ -10,6 +34,10 @@
 	{% endif %}
 </span>
 <h1>{{ ad.title }}</h1>
+{% if ad.content_type %}
+<img style="float: right; max-width:50%;" src="{% url 'ads:ad_picture' ad.id %}" 
+	onclick="document.getElementById('overlay').style.display = 'block';">
+{% endif %}
 <p>
 	{{ ad.text }}
 </p>
