--- a/home/templates/base_bootstrap.html
+++ b/home/templates/base_bootstrap.html
@@ -5,7 +5,9 @@
 <title>{% block title %}{{ settings.APP_NAME }}{% endblock %}</title>
 
 <!-- Replace this value (42-42) with the one provided by the autograder -->
-<meta name="dj4e" content="ad47a008a2f806aa6eb1b53852cd8b37"> 
+<!-- <meta name="dj4e" content="ad47a008a2f806aa6eb1b53852cd8b37"> -->
+
+<meta name="dj4e" content="7aee26c309def8c5a2a076eb250b8f36">
 
 <meta name="dj4e-code" content="42159921692586">
 
