--- a/ads/templates/ads/ad_detail.html
+++ b/ads/templates/ads/ad_detail.html
@@ -34,6 +34,7 @@
 	{% endif %}
 </span>
 <h1>{{ ad.title }}</h1>
+
 {% if ad.content_type %}
 <img style="float: right; max-width:50%;" src="{% url 'ads:ad_picture' ad.id %}" 
 	onclick="document.getElementById('overlay').style.display = 'block';">
@@ -41,6 +42,30 @@
 <p>
 	{{ ad.text }}
 </p>
+
+{% if user.is_authenticated %}
+<br clear="all"/>
+<p>
+	{% load crispy_forms_tags %}
+	<form method="post" action="{% url 'ads:ad_comment_create' ad.id %}">
+		{% csrf_token %}
+		{{ comment_form|crispy }}
+
+		<input type="submit" value="Submit">
+		<input type="submit" value="All Ads" onclick="window.location.href='{% url 'ads:all' %}'; return false;">		
+	</form>
+</p>
+{% endif %}
+
+{% for comment in comments %}
+<p> {{ comment.text }}	
+	({{ comment.updated_at|naturaltime }})
+	{% if user == comment.owner %}
+	<a href="{% url 'ads:ad_comment_delete' comment.id %}"><i class="fa fa-trash"></i></a>
+	{% endif %}
+</p>
+{% endfor %}
+
 <p></p>
 <p>
 	<a href="{% url 'ads:all' %}">All ads</a>
